[Add]footer 작업 시작

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/fn_banner.css">
     <link rel="stylesheet" href="./css/main_service.css">
     <link rel="stylesheet" href="./css/recom_pd.css">
+    <link rel="stylesheet" href="./css/footer.css">
 </head>
 <body>
     <div class="container">
@@ -188,6 +189,47 @@
     </div>
 
     <!-- 추천 상품 배너 종료 -->
+
+    <!-- footer -->
+    <div>
+        <div>
+            <div>
+                <h2></h2>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <div>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <a href="javascript:void(null);"></a>
+                    <div></div>
+                    <div>
+                        <div><a href=""></a><a href=""></a></div>
+                    </div>
+            </div>
+        </div>
+    </div>
+    <!-- footer 종료 -->
 </div>
 </body>
 </html>
