[Add] 푸터 제작 중

--- a/index.html
+++ b/index.html
@@ -191,24 +191,24 @@
     <!-- 추천 상품 배너 종료 -->
 
     <!-- footer -->
-    <div>
-        <div>
-            <div>
-                <h2></h2>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+    <div id="footer"> 
+        <div id="foot_box">
+            <div id="foot_box2">
+                    <ul id="line1">
+                        <li><a href="javascript:void(null);">개인정보처리방침</a></li>
+                        <li><a href="javascript:void(null);">신용정보활용체제</a></li>
+                        <li><a href="javascript:void(null);">전자민원</a></li>
+                        <li><a href="javascript:void(null);">사고신고</a></li>
+                        <li><a href="javascript:void(null);">신한지킴이</a></li>
+                        <li><a href="javascript:void(null);">보호금융상품등록부</a></li>
+                        <li><a href="javascript:void(null);">상품공시실</a></li>
+                        <li><a href="javascript:void(null);">영업점안내</a></li>
+                        <li><a href="javascript:void(null);">상담신청</a></li>
+                        <li><a href="javascript:void(null);">웹접근성이용안내</a></li>
+                        <li><a href="javascript:void(null);">위치기반서비스약관</a></li>
+                        <a id="top_btn" href="javascript:void(null);">top</a>
                     </ul>
+                    <a href="javascript:void(null);"></a>
                     <div>
                         <span></span>
                         <span></span>
